--- a/client_packages/cs_packages/WiredPlayers-Client/WiredPlayers-Client.csproj
+++ b/client_packages/cs_packages/WiredPlayers-Client/WiredPlayers-Client.csproj
@@ -12,10 +12,10 @@
 
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\..\dotnet\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\RAGEMP\server-files\dotnet\runtime\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="rage-sharpN">
-      <HintPath>..\..\..\..\dotnet\rage-sharpN.dll</HintPath>
+      <HintPath>bin\Debug\netcoreapp3.1\rage-sharpN.dll</HintPath>
     </Reference>
   </ItemGroup>
 
