--- a/client_packages/cs_packages/WiredPlayers-Client/WiredPlayers-Client.csproj
+++ b/client_packages/cs_packages/WiredPlayers-Client/WiredPlayers-Client.csproj
@@ -12,8 +12,7 @@
 
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\RAGEMP\server-files\dotnet\runtime\Newtonsoft.Json.dll</HintPath>
-    </Reference>
+      <HintPath>..\..\..\..\dotnet\Newtonsoft.Json.dll</HintPath>    </Reference>
     <Reference Include="rage-sharpN">
       <HintPath>bin\Debug\netcoreapp3.1\rage-sharpN.dll</HintPath>
     </Reference>
